@@ -10,6 +10,7 @@
 
 package org.junit.jupiter.engine.extension;
 
+import static java.util.Objects.requireNonNull;
 import static java.util.concurrent.TimeUnit.DAYS;
 import static java.util.concurrent.TimeUnit.HOURS;
 import static java.util.concurrent.TimeUnit.MICROSECONDS;
@@ -21,8 +22,6 @@ import static java.util.regex.Pattern.CASE_INSENSITIVE;
 import static java.util.regex.Pattern.UNICODE_CASE;
 
 import java.time.format.DateTimeParseException;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
@@ -36,19 +35,16 @@ class TimeoutDurationParser {
 
 	private static final Pattern PATTERN = Pattern.compile("([1-9]\\d*) ?((?:[nμm]?s)|m|h|d)?",
 		CASE_INSENSITIVE | UNICODE_CASE);
-	private static final Map<String, TimeUnit> UNITS_BY_ABBREVIATION;
 
-	static {
-		Map<String, TimeUnit> unitsByAbbreviation = new HashMap<>();
-		unitsByAbbreviation.put("ns", NANOSECONDS);
-		unitsByAbbreviation.put("μs", MICROSECONDS);
-		unitsByAbbreviation.put("ms", MILLISECONDS);
-		unitsByAbbreviation.put("s", SECONDS);
-		unitsByAbbreviation.put("m", MINUTES);
-		unitsByAbbreviation.put("h", HOURS);
-		unitsByAbbreviation.put("d", DAYS);
-		UNITS_BY_ABBREVIATION = Collections.unmodifiableMap(unitsByAbbreviation);
-	}
+	private static final Map<String, TimeUnit> UNITS_BY_ABBREVIATION = Map.of( //
+		"ns", NANOSECONDS, //
+		"μs", MICROSECONDS, //
+		"ms", MILLISECONDS, //
+		"s", SECONDS, //
+		"m", MINUTES, //
+		"h", HOURS, //
+		"d", DAYS //
+	);
 
 	TimeoutDuration parse(CharSequence text) throws DateTimeParseException {
 		Matcher matcher = PATTERN.matcher(text);
@@ -56,7 +52,7 @@ class TimeoutDurationParser {
 			long value = Long.parseLong(matcher.group(1));
 			String unitAbbreviation = matcher.group(2);
 			TimeUnit unit = unitAbbreviation == null ? SECONDS
-					: UNITS_BY_ABBREVIATION.get(unitAbbreviation.toLowerCase(Locale.ENGLISH));
+					: requireNonNull(UNITS_BY_ABBREVIATION.get(unitAbbreviation.toLowerCase(Locale.ENGLISH)));
 			return new TimeoutDuration(value, unit);
 		}
 		throw new DateTimeParseException("Timeout duration is not in the expected format (<number> [ns|μs|ms|s|m|h|d])",
