@@ -10,7 +10,6 @@
 
 package org.junit.platform.commons.util;
 
-import static java.util.stream.Collectors.toList;
 import static org.apiguardian.api.API.Status.INTERNAL;
 
 import java.util.Arrays;
@@ -22,6 +21,7 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import org.apiguardian.api.API;
+import org.jspecify.annotations.Nullable;
 
 /**
  * Collection of utilities for creating filters based on class names.
@@ -52,7 +52,7 @@ public class ClassNamePatternFilterUtils {
 	 *
 	 * @param patterns a comma-separated list of patterns
 	 */
-	public static <T> Predicate<T> excludeMatchingClasses(String patterns) {
+	public static <T> Predicate<T> excludeMatchingClasses(@Nullable String patterns) {
 		return matchingClasses(patterns, object -> object.getClass().getName(), FilterType.EXCLUDE);
 	}
 
@@ -62,7 +62,7 @@ public class ClassNamePatternFilterUtils {
 	 *
 	 * @param patterns a comma-separated list of patterns
 	 */
-	public static Predicate<String> excludeMatchingClassNames(String patterns) {
+	public static Predicate<String> excludeMatchingClassNames(@Nullable String patterns) {
 		return matchingClasses(patterns, Function.identity(), FilterType.EXCLUDE);
 	}
 
@@ -73,7 +73,7 @@ public class ClassNamePatternFilterUtils {
 	 *
 	 * @param patterns a comma-separated list of patterns
 	 */
-	public static <T> Predicate<T> includeMatchingClasses(String patterns) {
+	public static <T> Predicate<T> includeMatchingClasses(@Nullable String patterns) {
 		return matchingClasses(patterns, object -> object.getClass().getName(), FilterType.INCLUDE);
 	}
 
@@ -83,7 +83,7 @@ public class ClassNamePatternFilterUtils {
 	 *
 	 * @param patterns a comma-separated list of patterns
 	 */
-	public static Predicate<String> includeMatchingClassNames(String patterns) {
+	public static Predicate<String> includeMatchingClassNames(@Nullable String patterns) {
 		return matchingClasses(patterns, Function.identity(), FilterType.INCLUDE);
 	}
 
@@ -91,7 +91,7 @@ public class ClassNamePatternFilterUtils {
 		INCLUDE, EXCLUDE
 	}
 
-	private static <T> Predicate<T> matchingClasses(String patterns, Function<T, String> classNameProvider,
+	private static <T> Predicate<T> matchingClasses(@Nullable String patterns, Function<T, String> classNameProvider,
 			FilterType type) {
 		// @formatter:off
 		return Optional.ofNullable(patterns)
@@ -123,7 +123,7 @@ public class ClassNamePatternFilterUtils {
 				.map(String::trim)
 				.map(ClassNamePatternFilterUtils::replaceRegExElements)
 				.map(Pattern::compile)
-				.collect(toList());
+				.toList();
 		// @formatter:on
 	}
 
